src/objects/AF_Sub_Result__c.object
<CustomObject>
    <fields>
        <fullName>AF_Adaptation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adaptation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Target__c</fullName>
        <label>Bonus Target</label>
        <picklist>
            <picklistValues>
                <fullName>% Business winning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS MAT bps change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USG</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Threshold__c</fullName>
        <label>Bonus Threshold</label>
        <referenceTo>AF_Bonus_Threshold__c</referenceTo>
        <relationshipLabel>Sub Result</relationshipLabel>
        <relationshipName>Sub_Result</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AF_Bonusable_Fees__c</fullName>
        <label>BonusableFee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Class_code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Comment__c</fullName>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Minimum__c</fullName>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Outstanding__c</fullName>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Qual_Bonus_Value__c</fullName>
        <label>Qual Bonus Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Qual_Per__c</fullName>
        <label>Qual Bonus%</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Qual__c</fullName>
        <description>To store Qual values</description>
        <label>Qual Result</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quant_Bonus_Value__c</fullName>
        <description>To Store the Quant Bonus related values</description>
        <label>Quant Bonus Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quant_Bonus__c</fullName>
        <description>To Store the Quant Bonus related values</description>
        <label>Quant Bonus %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quant__c</fullName>
        <description>To store the Quant values</description>
        <label>Quant Result</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Result_type__c</fullName>
        <formula>if( text(AF_Period__c)=&quot;&quot;,&quot;Annual&quot;,&quot;Quarterly&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Status__c</fullName>
        <description>Submitted</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Stretching__c</fullName>
        <label>Stretching</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_Bonus_Value__c</fullName>
        <label>Total Bonus Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_Bonus__c</fullName>
        <label>Total Bonus %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_bonus_fees__c</fullName>
        <label>Total bonus fees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Traditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_UnileverCountry__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Mayanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Unique_Key__c</fullName>
        <formula>CASESAFEID(AF_country__c) &amp;&quot;|&quot;&amp; CASESAFEID(AF_Bonus_Threshold__r.Agency_Name__c) &amp;&quot;|&quot;&amp; 
AF_Bonus_Threshold__r.Year__c &amp;&quot;|&quot;&amp;  TEXT(AF_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unique_Thresholds__c</fullName>
        <externalId>true</externalId>
        <label>Unique Thresholds</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AF_country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AF_Entity__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Unilever Entity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>Sub Result</relationshipLabel>
        <relationshipName>Sub_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_deletion_key__c</fullName>
        <formula>CASESAFEID(AF_Bonus_Threshold__c) &amp;&quot;|&quot; &amp; text(Bonus_Measure__c) &amp;&quot;|&quot; &amp; text(AF_Minimum__c) &amp;&quot;|&quot; &amp; text(AF_Stretching__c) &amp;&quot;|&quot;&amp; text(AF_Outstanding__c)&amp;&quot;|&quot; &amp; CASESAFEID(AF_country__c)&amp;&quot;|&quot; &amp; AF_Bonus_Threshold__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>deletion_key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Measure__c</fullName>
        <label>Bonus Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Business Measure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonus_Measures__c</fullName>
        <label>Bonus Measures</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Attribute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonus_Targets__c</fullName>
        <label>Bonus Targets</label>
        <picklist>
            <picklistValues>
                <fullName>% Business winning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS MAT bps change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Green Preview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Agency_Uq_Combination__c</fullName>
        <formula>AF_Bonus_Threshold__r.Brand_Name__c +&apos;::&apos;+ AF_Bonus_Threshold__r.Agency_Name__c +&apos;::&apos;+  AF_Bonus_Threshold__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Agency Uq Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qual_Result__c</fullName>
        <label>Qual Result</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quant_Result__c</fullName>
        <label>Quant Result</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Result_AnnualID__c</fullName>
        <label>Sub Result AnnualID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <formula>CASESAFEID(AF_Bonus_Threshold__c) &amp;&quot;|&quot; &amp;  text(Bonus_Measure__c) &amp;&quot;|&quot; &amp;  text(AF_Minimum__c) &amp;&quot;|&quot; &amp;  text(AF_Stretching__c) &amp;&quot;|&quot;&amp; text(AF_Outstanding__c)&amp;&quot;|&quot; &amp; CASESAFEID(AF_country__c)&amp;&quot;|&quot; &amp;  text(AF_Period__c)&amp;&quot;|&quot; &amp; AF_Bonus_Threshold__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>key</label>
        <type>Text</type>
    </fields>
    <label>Sub Result</label>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Sub Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Result</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>